Wrap MapState directly instead of using another object